--- a/D4.html
+++ b/D4.html
@@ -11,8 +11,26 @@
     <title>Alex Books</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div  class="btn-group">
+            <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Cart
+            </button>
+            <div id='cart' class="dropdown-menu">
+ <!---                 ADD TO CART BOOKS                    ----->               
+            <div class="dropdown-divider"></div>
+<!---                  SEPERATED LINKS FOR THE SKIP BOOKS                     ----->
+            <a class="dropdown-item" href="#"></a>
+            </div>
+        </div>
+      </nav>
+
     <h1>Alex Books</h1>
 
+ <!-- Example single danger button -->
+
+
+    <input class="" type="search" placeholder="Search books">
     <div class="row ml-4">
  
     </div>
