--- a/D4.html
+++ b/D4.html
@@ -31,7 +31,7 @@
  <!-- Example single danger button -->
 
     <div class="searchBarDiv mb-2 sticky-top">
-    <input class="searchBar" type="text" placeholder="Search books" onchange="query(event)">
+    <input class="searchBar" type="text" placeholder="Search books" onchange="search(this.value)">
     </div>
 
     <div class="row ml-4">
